# node-weakauras-parser

./: .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  package.json
.github/workflows/: Dockerfile  publish.yml  test.yml
lib/: index.d.ts  index.js
native/: Cargo.toml
native/.cargo/: config
native/LICENSES/: fastbase64  serde_json
native/src/: asynchronous.rs  common.rs  lib.rs  macros.rs  synchronous.rs
native/src/ace_serialize/: mod.rs
native/src/ace_serialize/deserialization/: mod.rs  reader.rs
native/src/ace_serialize/serialization/: mod.rs
native/src/base64/: byte_map.rs  mod.rs
native/src/base64/decode/: mod.rs  scalar.rs  sse.rs
native/src/base64/encode/: mod.rs  scalar.rs  sse.rs
native/src/deserialization/: mod.rs  reader.rs
native/src/huffman/: bitfield.rs  lookup_table.rs  mod.rs  utils.rs
native/src/lib_serialize/: mod.rs  type_tag.rs
native/src/lib_serialize/deserialization/: mod.rs  reader.rs
native/src/lib_serialize/serialization/: mod.rs
native/src/serialization/: mod.rs
