[package]
name = "node-weakauras-parser"
version = "1.0.16"
authors = ["Velithris"]
edition = "2018"
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_weakauras_parser"
crate-type = ["cdylib"]

[profile.release]
lto = true # increases compile time, decreases size of a binary

[build-dependencies]
neon-build = "0.8.1"

[dependencies]
neon = { version = "0.8.1", features = ["napi-runtime"], default-features = false }
flate2 = { version = "1.0.20", features = ["zlib-ng-compat"], default-features = false }
