[package]
name = "node-weakauras-parser"
version = "3.2.5"
authors = ["Velithris"]
edition = "2024"
license = "MIT"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true # increases compile time, decreases size of a binary
strip = true

[dependencies]
neon = { version = "1", features = ["napi-4"], default-features = false }
flate2 = { version = "1", features = ["zlib-ng-compat"], default-features = false }
serde_json = { version = "1", features = ["preserve_order"] }
ryu = "1"
itoa = "1"
indexmap = "1"
