[package]
name = "node-weakauras-parser"
version = "3.2.6"
authors = ["Velithris"]
edition = "2024"
license = "MIT"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true # increases compile time, decreases size of a binary
strip = true

[features]
default = ["gpl-dependencies"]
gpl-dependencies = ["weakauras-codec/gpl-dependencies"]

[dependencies]
neon = { version = "1", features = ["napi-4"], default-features = false }
serde_json = { version = "1", features = ["preserve_order"] }

[dependencies.weakauras-codec]
version = "0.1.0"
default-features = false
features = ["flate2-zlib-ng", "serde", "lua-value-indexmap"]
